# actions

./: .bumpversion.toml  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml  pyrightconfig.json  pytest.toml  qwer
.github/workflows/: pull-request.yaml  push.yaml
data/: .runner
src/actions/: __init__.py  cli.py  constants.py  lib.py  settings.py  types.py  utilities.py
src/actions/action_dicts/: lib.py
src/actions/clean_dir/: cli.py  lib.py  settings.py
src/actions/commands/: tag.py
src/actions/conformalize/: dicts.py
src/actions/conformalize_repo/: cli.py  constants.py  defaults.py  lib.py  settings.py
src/actions/format_requirements/: cli.py  lib.py
src/actions/git_clone_with/: cli.py  lib.py  settings.py
src/actions/hooks/: cli.py  lib.py  settings.py
src/actions/pre_commit/: constants.py  utilities.py
src/actions/pre_commit/conformalize_repo/: action_dicts.py  cli.py  constants.py  lib.py  settings.py
src/actions/pre_commit/format_requirements/: cli.py  constants.py  lib.py
src/actions/pre_commit/replace_sequence_strs/: cli.py  constants.py  lib.py
src/actions/pre_commit/touch_empty_py/: cli.py  constants.py  lib.py
src/actions/pre_commit/touch_py_typed/: cli.py  constants.py  lib.py
src/actions/pre_commit/update_requirements/: classes.py  cli.py  constants.py  lib.py  settings.py
src/actions/publish/: cli.py  lib.py  settings.py
src/actions/publish_package/: cli.py  constants.py  doc.py  lib.py
src/actions/random_sleep/: cli.py  constants.py  doc.py  lib.py  settings.py
src/actions/re_encrypt/: cli.py  constants.py  lib.py  settings.py
src/actions/register_gitea_runner/: cli.py  constants.py  lib.py  settings.py
src/actions/register_gitea_runner/configs/: entrypoint.sh
src/actions/replace_sequence_strs/: cli.py
src/actions/requirements/: cli.py  lib.py
src/actions/run_hooks/: cli.py  constants.py  doc.py  lib.py  settings.py
src/actions/sequence_strs/: cli.py  lib.py
src/actions/sequences/: cli.py
src/actions/set_up_cron/: cli.py  constants.py  lib.py
src/actions/set_up_cron/configs/: cron.tmpl  job.tmpl
src/actions/set_up_cronjob/: cli.py  constants.py  lib.py
src/actions/set_up_cronjob/configs/: cron.tmpl
src/actions/setup_cronjob/: cli.py  constants.py  lib.py  settings.py
src/actions/setup_cronjob/configs/: cron.tmpl
src/actions/setup_ssh_config/: lib.py
src/actions/sleep/: cli.py  lib.py  settings.py
src/actions/sops/: cli.py  lib.py  settings.py
src/actions/tag/: cli.py  lib.py
src/actions/tag_commit/: cli.py  constants.py  doc.py  lib.py
src/actions/update_requirements/: cli.py  lib.py
src/tests/: conftest.py  test_cli.py  test_settings.py  test_utilities.py  testing.py
src/tests/conformalize_repo/: test_lib.py
src/tests/hooks/: test_lib.py
src/tests/pre_commit/: test_utilities.py
src/tests/pre_commit/conformalize_repo/: test_lib.py
src/tests/pre_commit/format_requirements/: in.toml  out.toml  test_lib.py
src/tests/pre_commit/replace_sequence_strs/: test_lib.py
src/tests/pre_commit/touch_empty_py/: test_lib.py
src/tests/pre_commit/touch_py_typed/: test_lib.py
src/tests/pre_commit/update_requirements/: test_lib.py
src/tests/publish/: test_settings.py
src/tests/publish_package/: test_settings.py
src/tests/register_gitea_runner/: test_lib.py
src/tests/requirements/: in.toml  test_lib.py
src/tests/run_hooks/: test_lib.py
src/tests/sequence_strs/: in_.py  out.py  test_lib.py
src/tests/set_up_cron/: test_lib.py
src/tests/set_up_cronjob/: test_lib.py
src/tests/setup_cronjob/: test_lib.py
