[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = [
    "dycw-utilities[test]>=0.184.4",
    "orjson>=3.11.5",
    "pyright>=1.1.408",
    "rich>=14.2.0",
  ]

[project]
  dependencies = [
    "attrs>=25.4.0",
    "click>=8.3.1",
    "coloredlogs>=15.0.1",
    "dycw-utilities>=0.184.4",
    "inflect>=7.5.0",
    "libcst>=1.8.6",
    "ordered-set>=4.1.0",
    "packaging>=25.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruamel-yaml>=0.19.1",
    "tabulate>=0.9.0",
    "tomlkit>=0.14.0",
    "typed-settings>=25.3.0",
    "xdg-base-dirs>=6.0.2",
  ]
  description = "Library of actions"
  name = "dycw-actions"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.16.1"

  [project.scripts]
    cli = "actions.cli:_main"

  [project.optional-dependencies]
    cli = [
      "attrs==25.4.0",
      "click==8.3.1",
      "coloredlogs==15.0.1",
      "dycw-utilities==0.184.4",
      "inflect==7.5.0",
      "libcst==1.8.6",
      "ordered-set==4.1.0",
      "packaging==25.0",
      "pydantic==2.12.5",
      "pyyaml==6.0.3",
      "requests==2.32.5",
      "rich==14.2.0",
      "ruamel-yaml==0.19.1",
      "tabulate==0.9.0",
      "tomlkit==0.14.0",
      "typed-settings==25.3.0",
      "xdg-base-dirs==6.0.2",
    ]

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "actions"
      module-root = "src"
