[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]>=0.188.19", "orjson>=3.11.7", "pyright>=1.1.408"]

[project]
  dependencies = [
    "click>=8.3.1",
    "dycw-utilities>=0.188.19",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruamel-yaml>=0.19.1",
    "xdg-base-dirs>=6.0.2",
  ]
  description = "Library of actions"
  name = "dycw-actions"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.16.16"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "dycw-utilities==0.188.19",
      "pydantic==2.12.5",
      "requests==2.32.5",
      "ruamel-yaml==0.19.1",
      "xdg-base-dirs==6.0.2",
    ]

  [project.scripts]
    cli = "actions.cli:cli"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "actions"
      module-root = "src"
